Criteo logo update & spacing fixes

--- a/src/styles/pages/__case_studies.scss
+++ b/src/styles/pages/__case_studies.scss
@@ -14,7 +14,7 @@
     }
 
     &__logo {
-        height: 3rem;
+        height: 4rem;
     }
 
     &__quote {
